--- a/projects/simple-portfolio-website.html
+++ b/projects/simple-portfolio-website.html
@@ -69,7 +69,7 @@
         <figcaption>1-1</figcaption>
       </figure>
       <p>Simple and user-friendly Website</p>
-      <div class="cta"><a class="btn" href="https://rishi698.github.io/rishi-bodke/" target="_blank">Check it out!</a></div>
+      <div class="cta"><a class="btn" href="https://rishi698.github.io/rishi/" target="_blank">Check it out!</a></div>
       
       <h2 id="role">My Role</h2>
       <p>As it is a personal portfolio project, I was the sole designer and developer. I designed and developed the entire website myself.</p>
@@ -138,7 +138,7 @@
         </ol>
       </p>
       <hr>
-      <div class="cta"><a class="btn" href="https://rishi698.github.io/rishi-bodke/" target="_blank">Check it out!</a></div>
+      <div class="cta"><a class="btn" href="https://rishi698.github.io/rishi/" target="_blank">Check it out!</a></div>
       </div>
   
       <a class="bottom" href="../projects/student-management-portal.html">
