Added LinkedIn Badge

--- a/about.html
+++ b/about.html
@@ -53,6 +53,8 @@
     <div class="cta" style="margin-bottom: 0;"><a class="btn" href="https://drive.google.com/open?id=0B-54ODooFBBeV29xd0s0ajFBVGs" target="_blank">Download resume</a></div>
     </p>
    
+    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a></div>
+              
     <footer>
         <hr/>
         <div class="contact">
@@ -72,6 +74,7 @@
    </div>
    
     <script src="script.js"></script>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   </body>
   
 </html>
