--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         In the non-technical field, I have completed a 120 hour Premier TEFL course, Teaching English as a Foreign Language (TEFL/TESOL).
     <br><br>
     I like learning new stuff: languages, photography, guitar... I can speak English, Hindi, Marathi and Japanese fluently. Some of my favourite manga are ONE PIECE, Naruto, Vagabond, Berserk.</p>
-    <div class="cta" style="margin-bottom: 0;"><a class="btn" href="https://drive.google.com/open?id=0B-54ODooFBBeV29xd0s0ajFBVGs" target="_blank">Download resume</a></div>
+    <div class="cta" style="margin-bottom: 0;"><a class="btn" href="https://drive.google.com/file/d/1fhX31HqzmSxqf-faR7Ia1t2x9tE_x-SM/view" target="_blank">Download resume</a></div>
     </p>
    
     <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a></div>
