--- a/certifications.html
+++ b/certifications.html
@@ -125,7 +125,7 @@
       </div>
 
       <div><br></div>
-      <div class="cta" style="margin-bottom: 0;"><a class="btn" href="https://drive.google.com/open?id=0B-54ODooFBBeV29xd0s0ajFBVGs" target="_blank">Download resume</a></div>
+      <div class="cta" style="margin-bottom: 0;"><a class="btn" href="https://drive.google.com/file/d/1fhX31HqzmSxqf-faR7Ia1t2x9tE_x-SM/view" target="_blank">Download resume</a></div>
     </div> 
     <footer>
         <hr/>
