--- a/about.html
+++ b/about.html
@@ -43,13 +43,15 @@
         <br>
         I have experience in Web Design, Wireframing, Making website prototypes, creating and managing Web Content using popular CMS like WordPress, Drupal, and Joomla!
         <br>
-        Through completion of the Google IT Support Professional Certificate, I developed skills in Customer Service, Networking, Operating Systems (Windows & Linux), System Administration, and Security.
-        <br>
-        I'm passionate about continuously learning in the IT field and supporting people to solve their technical problems.
-        <br>
-        In the non-technical field, I have completed a 120 hour Premier TEFL course, Teaching English as a Foreign Language (TEFL/TESOL).
+        I have also completed the Google IT Support Professional Certification courser, and have developed skills in Customer Service, Networking, Operating Systems (Windows & Linux), System Administration, and Security.
+        <br><br>
+        I'm passionate about continuously learning in the IT field and supporting people to solve their problems.
+        
     <br><br>
-    I like learning new stuff: languages, photography, guitar... I can speak English, Hindi, Marathi and Japanese fluently. Some of my favourite manga are ONE PIECE, Naruto, Vagabond, Berserk.</p>
+    As for my hobbies and interests, I like reading and learning about ancient Indian and Japanese history and cultures. 
+    <br>I also love reading Japanese manga,novels and watching anime. Some of my favourite manga are ONE PIECE, Naruto, Vagabond, Berserk.
+    <br> My long term goal is to travel all around the world, learn about different cultures and write about it.
+    <br><br>I can speak English, Hindi, Marathi and Japanese language fluently. </p>
     <div class="cta" style="margin-bottom: 0;"><a class="btn" href="https://drive.google.com/file/d/1fhX31HqzmSxqf-faR7Ia1t2x9tE_x-SM/view" target="_blank">Download resume</a></div>
     </p>
    
