--- a/about.html
+++ b/about.html
@@ -48,10 +48,12 @@
         I'm passionate about continuously learning in the IT field and supporting people to solve their problems.
         
     <br><br>
+    I can speak English, Hindi, Marathi and Japanese language fluently.
+   <br>
     As for my hobbies and interests, I like reading and learning about ancient Indian and Japanese history and cultures. 
-    <br>I also love reading Japanese manga,novels and watching anime. Some of my favourite manga are ONE PIECE, Naruto, Vagabond, Berserk.
+    <br>I love reading Japanese manga, novels, watching anime and listening to music. Some of my favourite manga are ONE PIECE, Naruto, Vagabond, Berserk, HunterxHunter.
     <br> My long term goal is to travel all around the world, learn about different cultures and write about it.
-    <br><br>I can speak English, Hindi, Marathi and Japanese language fluently. </p>
+    </p>
     <div class="cta" style="margin-bottom: 0;"><a class="btn" href="https://drive.google.com/file/d/1fhX31HqzmSxqf-faR7Ia1t2x9tE_x-SM/view" target="_blank">Download resume</a></div>
     </p>
    
