--- a/about.html
+++ b/about.html
@@ -39,13 +39,27 @@
     <figure>
       <img src="assets/me.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="the author's profile picture">
     </figure>
-    <p>I am a motivated and skilled individual seeking new oppurtunities in IT, preferably in Japan.
-        <br>
-        I have experience in Web Design, Wireframing, Making website prototypes, creating and managing Web Content using popular CMS like WordPress, Drupal, and Joomla!
-        <br>
-        I have also completed the Google IT Support Professional Certification courser, and have developed skills in Customer Service, Networking, Operating Systems (Windows & Linux), System Administration, and Security.
-        <br><br>
-        I'm passionate about continuously learning in the IT field and supporting people to solve their problems.
+    <p>I am a motivated and skilled individual seeking new opportunities in IT, preferably in Japan.
+
+Currently, I am working as a Project Engineer in Wipro Limited, at Bengaluru, India.
+
+Technology has fascinated me ever since I was kid and it continues to do so even today. Today, the use of technology has increased beyond most expectations. They are involved in almost every aspect of our lives, and it seems as if the list of possibilities that they will offer us tomorrow is almost infinite.
+
+Among all the amazing and different kinds of technologies we have today, "The Web" has the most impact on me. The way how the World Wide Web and all the websites and applications running on it, connect this world is just astonishing.
+
+I most enjoy web design, as I really enjoy the tasks involved in creating a website, from the layout, colour scheme to designing the graphics for the website, and the programmes used, such as Dreamweaver and Photoshop.
+
+I was first introduced to HTML in my 8th grade and continued to study it till 10th grade. Ever since then, I was attracted to the web technologies. During my college, I studied CSS and JavaScript through YouTube tutorials and online courses on Coursera and Udemy.; the tutorials that were provided helped to give me a foundation which I could later build upon.
+
+Over the last few years I have continuously strived to gain and improve my knowledge throughout all aspects of the web like Responsive Web Design, Bootstrap, Sass, and continue to learn technologies like ReactJS.
+
+Apart from the technology world, I love to travel and it is my dream to travel the whole world, especially entire of India and Japan.
+
+I also love to watch anime, read manga and historical books.
+
+I love teaching so I have completed a 120 hour Premier TEFL course, Teaching English as a Foreign Language (TEFL/TESOL), just in case when I want to take a break from the techological world.
+
+Thank you for reading this. I look forward to meet and work with you.
         
     <br><br>
     I can speak English, Hindi, Marathi and Japanese language fluently.
