--- a/about.html
+++ b/about.html
@@ -39,18 +39,37 @@
     <figure>
       <img src="assets/me.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="the author's profile picture">
     </figure>
-    <p>I am a motivated and skilled individual seeking new opportunities in IT, preferably in Japan.</p>
-<p>Currently, I am working as a Project Engineer in Wipro Limited, at Bengaluru, India.</p>
-<p>Technology has fascinated me ever since I was kid and it continues to do so even today. Today, the use of technology has increased beyond most expectations. They are involved in almost every aspect of our lives, and it seems as if the list of possibilities that they will offer us tomorrow is almost infinite.</p>
-<p>Among all the amazing and different kinds of technologies we have today, "The Web" has the most impact on me. The way how the World Wide Web and all the websites and applications running on it, connect this world is just astonishing.</p>
-<p>I most enjoy web design, as I really enjoy the tasks involved in creating a website, from the layout, colour scheme to designing the graphics for the website, and the programmes used, such as Dreamweaver and Photoshop.</p>
-<p>I was first introduced to HTML in my 8th grade and continued to study it till 10th grade. Ever since then, I was attracted to the web technologies. During my college, I studied CSS and JavaScript through YouTube tutorials and online courses on Coursera and Udemy.; the tutorials that were provided helped to give me a foundation which I could later build upon.</p>
-<p>Over the last few years I have continuously strived to gain and improve my knowledge throughout all aspects of the web like Responsive Web Design, Bootstrap, Sass, and continue to learn technologies like ReactJS.</p>
-<p>Apart from the technological world, I love to travel and it is my dream to travel the whole world, especially entire of India and Japan. I want to learn more about ancient Indian and Japanese history and cultures and make documentaries or blogs on it.</p>
-<p>I also love reading Japanese manga, novels, watching anime and listening to music. Some of my favourite manga are ONE PIECE, Naruto, Vagabond, Berserk, HunterxHunter.</p>
-<p>I can speak English, Hindi, Marathi and Japanese language fluently.</p>
-<p>I love teaching so I have completed a 120 hour Premier TEFL course, Teaching English as a Foreign Language (TEFL/TESOL), just in case when I want to take a break from the techological world.</p>
-<p>Thank you for reading this. I look forward to meet and work with you.</p>
+    <p>I am a motivated and skilled individual seeking new opportunities in IT, preferably in Japan. 
+      <br /><br />
+      Currently, I am working as a Project Engineer in Wipro Limited, at Bengaluru, India.
+      <br /><br />
+      Technology has fascinated me ever since I was kid and it continues to do so even today. Today, the use of technology has increased beyond most expectations. 
+      They are involved in almost every aspect of our lives, and it seems as if the list of possibilities that they will offer us tomorrow is almost infinite.
+      <br /><br />
+      Among all the amazing and different kinds of technologies we have today, "The Web" has the most impact on me. 
+      The way how the World Wide Web and all the websites and applications running on it, connect this world is just astonishing.
+      <br /><br />
+      I most enjoy web design, as I really enjoy the tasks involved in creating a website, from the layout, colour scheme to designing the graphics for the website, 
+      and the programmes used, such as Dreamweaver and Photoshop.
+      <br /> <br />
+      I was first introduced to HTML in my 8th grade and continued to study it till 10th grade. Ever since then, I was attracted to the web technologies. 
+      During my college, I studied CSS and JavaScript through YouTube tutorials and online courses on Coursera and Udemy; 
+      the tutorials that were provided helped to give me a foundation which I could later build upon.
+      <br /><br />
+      Over the last few years I have continuously strived to gain and improve my knowledge throughout all aspects of the web like Responsive Web Design, Bootstrap, 
+      Sass, and continue to learn technologies like ReactJS.
+      <br /><br />
+      Apart from the technological world, I love to travel and it is my dream to travel the whole world, especially entire of India and Japan. 
+      I want to learn more about ancient Indian and Japanese history and cultures and make documentaries or blogs on it. 
+      <br /><br />
+      I also love reading Japanese manga, novels, watching anime and listening to music. Some of my favourite manga are ONE PIECE, Naruto, Vagabond, Berserk, HunterxHunter.
+      <br /><br />
+      I can speak English, Hindi, Marathi and Japanese language fluently.
+      <br /><br />
+      I love teaching so I have completed a 120 hour Premier TEFL course, Teaching English as a Foreign Language (TEFL/TESOL), just in case when I want to take a 
+      break from the techological world.
+      <br /><br />
+      Thank you for reading this. I look forward to meet and work with you.</p>
     <div class="cta" style="margin-bottom: 0;"><a class="btn" href="https://drive.google.com/file/d/1fhX31HqzmSxqf-faR7Ia1t2x9tE_x-SM/view" target="_blank">Download resume</a></div>
     </p>
    
