--- a/certifications.html
+++ b/certifications.html
@@ -39,7 +39,6 @@
       <div class="tab">
         <button class="tablinks" onclick="openChoice(event, 'Technical')" id="defaultOpen">Technical</button>
         <button class="tablinks" onclick="openChoice(event, 'Non-Technical')">Non-Technical</button>
-        <button class="tablinks" onclick="openChoice(event, 'Extra-Curricular')">Extra-Curricular</button>
       </div>
       <div id="Technical" class="tabcontent">
         <figure>
@@ -47,80 +46,23 @@
             <img src="assets/google-it-support.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
         </figure>
         <figure>
-          <h3>Software Testing</h3>
-          <img src="assets/software-testing.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-        <figure>
-          <h3>Python for Data Science</h3>
-          <img src="assets/python-data-science.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-        <figure>
           <h3>Basics of Web Design</h3>
           <img src="assets/web-design.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
         </figure>
         <figure>
-          <h3>CLA: Programming Essentials in C</h3>
-          <img src="assets/cisco-c.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
+          <h3>C, C++ Programming Languages</h3>
+          <img src="assets/c-c++.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
         </figure>
-        <figure>
-          <h3>Spoken Tutorial- C language</h3>
-          <img src="assets/c-spoken.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-        <figure>
-          <h3>AUTOCAD</h3>
-          <img src="assets/AutoCAD.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>   
       </div>
 
       <div id="Non-Technical" class="tabcontent">
-        <figure>
-          <h3>TCS NQT Cognitive Skills</h3>
-          <img src="assets/nqt.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-        <figure>
-          <h3>AMCAT-Employability Report</h3>
-          <img src="assets/AMCAT-Certificate.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
         <figure>
           <h3>The Fundamentals of Digital Marketing</h3>
           <img src="assets/digital-marketing.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
         </figure>
         <figure>
-          <h3>Introduction to Japanese Language and Culture</h3>
-          <img src="assets/japanese-lang.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-        <figure>
           <h3>120-hour TEFL course</h3>
           <img src="assets/tefl.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-      </div>
-    
-      <div id="Extra-Curricular" class="tabcontent">
-        <figure>
-          <h3>Redhat Academy India Challenge Participation</h3>
-          <img src="assets/Redhat-Participation.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-        <figure>
-          <h3>ELEMENTA - Science Exhibition in College</h3>
-          <img src="assets/Elementa-Maths.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-          <img src="assets/Elementa-Physics.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-        <figure>
-          <h3>Science Exhibition - First Position</h3>
-          <img src="assets/Science Exhibition.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-        <figure>
-          <h3>Science Quiz</h3>
-          <img src="assets/Science Quiz.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-          <img src="assets/Mumbai Region Quiz.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-        <figure>
-          <h3>HSSF-Cyclothon, Jaipur</h3>
-          <img src="assets/JP Marathon.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
-        </figure>
-        <figure>
-          <h3>Nashik Run</h3>
-          <img src="assets/Nasik Run.jpg" srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x"alt="Certificate">
         </figure>
       </div>
 
