--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       break from the techological world.
       <br /><br />
       Thank you for reading this. I look forward to meet and work with you.</p>
-    <div class="cta" style="margin-bottom: 0;"><a class="btn" href="https://drive.google.com/file/d/1fhX31HqzmSxqf-faR7Ia1t2x9tE_x-SM/view" target="_blank">Download resume</a></div>
+    <div class="cta" style="margin-bottom: 0;"><a class="btn" href="https://drive.google.com/file/d/1dwnTMBxjkhZ1GeUWI7xvjJDZZJtCWsHb/view?usp=sharing" target="_blank">Download resume</a></div>
     </p>
    
     <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a></div>
