--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">Rishi Bodke</span>
-        <ul class="nav justify-content-end">
+        <ul class="nav nav-pills justify-content-end">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="index.html">Portfolio</a>
           </li>
@@ -48,9 +48,9 @@
       </div>
     </nav>
     <main>
-      <h3 class="mt-2 text-center">Hello! I am Rishi, a UI/UX Designer and Front-end Developer!</h3>
+      <h3 class="mt-2 text-center">Hello! I am <span style="color: rgb(9, 9, 156);">Rishi</span>, a UI/UX Designer and Front-end Developer!</h3>
       <section class="portfolio-section">
-        <h1 class="section-title my-xl-4">Projects</h1>
+        <h2 class="section-title my-xl-4"><u>PROJECTS</u></h2>
 
         <div class="portfolio-wrapper">
           <div class="row mb-4">
@@ -117,7 +117,7 @@
                   <img src="assets/mayo_japan.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Mayo Life site</h5>
-                    <p class="card-text">I designed and developed the mayo-life.site for a Japanese YouTube Mayo Japan.
+                    <p class="card-text">I designed and developed the mayo-life.site for a Japanese YouTuber Mayo Japan.
                     </p>
                     <a href="#" class="btn btn-primary">READ MORE</a>
                   </div>
