--- a/certifications.html
+++ b/certifications.html
@@ -34,12 +34,12 @@
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">Rishi Bodke</span>
-        <ul class="nav justify-content-end">
+        <ul class="nav nav-pills justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Portfolio</a>
+            <a class="nav-link"  href="index.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="certifications.html">Certifications</a>
+            <a class="nav-link active" aria-current="page" href="certifications.html">Certifications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
