--- a/about.html
+++ b/about.html
@@ -90,14 +90,16 @@
               <span class="badge bg-primary">2018 ~ Present</span>
               <h6 class="time-line-item-title">Freelancer</h6>
               <p class="time-line-item-subtitle">Web Design & Development</p>
-              <p class="time-line-item-content">Making designs for Web and Apps, designing banners, developing websites using CMS like WordPress, Joomla and Drupal.</p>
+              <p class="time-line-item-content">Making designs for Web and Apps, designing banners, developing websites
+                using CMS like WordPress, Joomla and Drupal.</p>
             </li>
 
             <li class="time-line-item">
               <span class="badge bg-primary">Jan 2018 - Dec 2021</span>
               <h6 class="time-line-item-title">Freelance Contributor - Usabilitiy Testing</h6>
               <p class="time-line-item-subtitle">UserTesting.com</p>
-              <p class="time-line-item-content">Usability Testing of new websites and applications or new features before they are
+              <p class="time-line-item-content">Usability Testing of new websites and applications or new features
+                before they are
                 launched to the public.
               </p>
             </li>
@@ -133,42 +135,34 @@
     </section>
     <section>
       <h4>SKILLS</h4>
-      <div class="row mb-4">
-        <div class="col-sm-4">
-          <div class="card-group">
-            <div class="card" style="width: 15rem;">
-              <div class="card-body">
-                <h5 class="card-title">Design</h5>
-                <p class="card-text"> Mobile & Desktop UI/UX Design, Research, Wireframing, Sketching, Prototyping,
-                  Visual Design, Responsive Design, Usability Testing
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card-group">
-            <div class="card" style="width: 15rem;">
-
-              <div class="card-body">
-                <h5 class="card-title">Front-end Development</h5>
-                <p class="card-text">HTML5, CSS3, JavaScript, Sass, BootStrap, ReactJS, WordPress, Drupal, Joomla
-                </p>
-              </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+        <div class="col">
+          <div class="card h-100">
+            <h5 class="card-header">Design</h5>
+            <div class="card-body">
+              <p class="card-text"> Mobile & Desktop UI/UX Design, Research, Wireframing, Sketching, Prototyping,
+                Visual Design, Responsive Design, Usability Testing
+              </p>
             </div>
           </div>
         </div>
 
-        <div class="col-sm-4">
-          <div class="card-group">
-            <div class="card" style="width: 15rem;">
-              <div class="card-body">
-                <h5 class="card-title">Software</h5>
-                <p class="card-text"> Figma, Sketch, Proto.io, Invision, AdobeXD, Visual Studio Code, Microsoft
-                  Office
-                  365
-                </p>
-              </div>
+        <div class="col">
+          <div class="card h-100">
+            <h5 class="card-header">Front-end Development</h5>
+            <div class="card-body">
+              <p class="card-text"> HTML5, CSS3, JavaScript, Sass, BootStrap, ReactJS, WordPress, Drupal, Joomla!
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100">
+            <h5 class="card-header">Software</h5>
+            <div class="card-body">
+              <p class="card-text"> Figma, Sketch, Proto.io, Invision, AdobeXD, Visual Studio Code, Microsoft Office 365
+              </p>
             </div>
           </div>
         </div>
@@ -177,40 +171,34 @@
 
     <section>
       <h4>PERSONAL DETAILS</h4>
-      <div class="row mb-4">
-        <div class="col-sm-4">
-          <div class="card-group">
-            <div class="card" style="width: 15rem;">
-              <div class="card-body">
-                <h5 class="card-title"><i class="fa fa-language" aria-hidden="true"></i> Languages </h5>
-                <p class="card-text"><i class="" aria-hidden="true"></i> English (fluent), Hindi(native),
-                  Marathi(native), Japanese (conversational)
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card-group">
-            <div class="card" style="width: 15rem;">
-
-              <div class="card-body">
-                <h5 class="card-title">Interests</h5>
-                <p class="card-text">Japan, Japanese Culture & History, India, Indian Culture & History, Travelling
-                </p>
-              </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+        <div class="col">
+          <div class="card h-100">
+            <h5 class="card-header"><i class="fa fa-language" aria-hidden="true"></i> Languages </h5>
+            <div class="card-body">
+              <p class="card-text"> English (fluent), Hindi(native),
+                Marathi(native), Japanese (conversational)
+              </p>
             </div>
           </div>
         </div>
 
-        <div class="col-sm-4">
-          <div class="card-group">
-            <div class="card" style="width: 15rem;">
-              <div class="card-body">
-                <h5 class="card-title">Hobbies</h5>
-                <p class="card-text"> Reading, Photography, Listening to Music, Sketching
-                </p>
-              </div>
+        <div class="col">
+          <div class="card h-100">
+            <h5 class="card-header">Interests</h5>
+            <div class="card-body">
+              <p class="card-text"> Japan, Japanese Culture & History, India, Indian Culture & History, Travelling
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100">
+            <h5 class="card-header">Hobbies</h5>
+            <div class="card-body">
+              <p class="card-text"> Reading, Photography, Listening to Music, Sketching
+              </p>
             </div>
           </div>
         </div>
@@ -239,7 +227,7 @@
 
     </main>
 
-    <footer>
+    <footer class="bg-light">
       <hr />
       <div class="d-flex justify-content-center">
         <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
@@ -259,7 +247,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script src="script.js"></script>
 </body>
 
 </html>
