--- a/certifications.html
+++ b/certifications.html
@@ -36,7 +36,7 @@
         <span class="navbar-brand mb-0 h1">Rishi Bodke</span>
         <ul class="nav nav-pills justify-content-end">
           <li class="nav-item">
-            <a class="nav-link"  href="index.html">Portfolio</a>
+            <a class="nav-link" href="index.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="certifications.html">Certifications</a>
@@ -49,68 +49,54 @@
     </nav>
     <main>
       <h1 class="section-title my-xl-4">Certifications</h1>
-      <div class="row mb-4">
-        <div class="col-sm-4">
-          <div class="card-group">
-            <div class="card" style="width: 15rem;">
-              <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Google IT Support</h5>
-              </div>
-            </div>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid" alt="...">
+            <h5 class="card-header">Google IT Support</h5>
           </div>
         </div>
 
-        <div class="col-sm-4">
-          <div class="card-group">
-            <div class="card" style="width: 15rem;">
-              <img src="assets/web-design.jpg" class="card-img-top .img-fluid" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Basic Web Design & Development</h5>
-              </div>
-            </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="assets/web-design.jpg" class="card-img-top .img-fluid" alt="...">
+            <h5 class="card-header">Basic Web Design & Development</h5>
           </div>
         </div>
 
-        <div class="col-sm-4">
-          <div class="card-group">
-            <div class="card" style="width: 15rem;">
-              <img src="assets/digital-marketing.jpg" class=".img-fluid card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">The Fundamentals of Digital Marketing</h5>
-              </div>
-            </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="assets/digital-marketing.jpg" class=".img-fluid card-img-top" alt="...">
+            <h5 class="card-header">The Fundamentals of Digital Marketing</h5>
           </div>
         </div>
       </div>
 
-      <div><br></div>
-      <div class="cta" style="margin-bottom: 0;"><a class="btn btn-primary"
+      <div class="mt-5"><a class="btn btn-primary"
           href="https://drive.google.com/file/d/1dwnTMBxjkhZ1GeUWI7xvjJDZZJtCWsHb/view?usp=sharing"
-          target="_blank">Download resume</a></div>
-  </div>
-  </main>
-  <footer>
-    <hr />
-    <div class="d-flex justify-content-center">
-      <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
-        <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
-      </a>
-      <a class="px-2" href="https://github.com/rishi698" target="_blank">
-        <i title="github" class="fab fa-github fa-lg social"></i>
-      </a>
-      <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
-        <i title="email" class="far fa-envelope fa-lg social"></i>
-      </a>
-    </div>
-    <p class="d-flex justify-content-center mt-2">Made with ❤️by Rishi, ©2022</p>
-  </footer>
+          target="_blank">Download Resume</a></div>
+    </main>
+    <footer class="bg-light">
+      <hr />
+      <div class="d-flex justify-content-center">
+        <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
+          <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
+        </a>
+        <a class="px-2" href="https://github.com/rishi698" target="_blank">
+          <i title="github" class="fab fa-github fa-lg social"></i>
+        </a>
+        <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+          <i title="email" class="far fa-envelope fa-lg social"></i>
+        </a>
+      </div>
+      <p class="d-flex justify-content-center mt-2">Made with ❤️by Rishi, ©2022</p>
+    </footer>
 
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-  crossorigin="anonymous"></script>
-<script src="script.js"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
