--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+  <link href="css/index.scss" rel="stylesheet">
 </head>
 
 <body>
@@ -48,136 +48,142 @@
       </div>
     </nav>
     <main>
-      <h3 class="mt-2 text-center">Hello! I am <span style="color: rgb(9, 9, 156);">Rishi</span>, a UI/UX Designer and Front-end Developer!</h3>
+      <h3 class="mt-2 text-center">Hello! I am <span style="color: rgb(9, 9, 156);">Rishi</span>, a UI/UX Designer and a
+        Front-end Developer!</h3>
       <section class="portfolio-section">
-        <h2 class="section-title my-xl-4"><u>PROJECTS</u></h2>
+        <h2 class="section-title my-xl-4"><u>Projects</u></h2>
 
         <div class="portfolio-wrapper">
-          <div class="row mb-4">
-            <div class="col-sm-4">
-              <div class="card-group">
-                <div class="card" style="width: 15rem;">
-                  <img src="assets/portfolio.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">A Basic Online Portfolio</h5>
-                    <p class="card-text">A simple digital portfolio for showcasing projects and skills made using HTML5,
-                      CSS3, JavaScript and Bootstrap 5.</p>
-                    <a href="#" class="btn btn-primary">READ MORE</a>
-                  </div>
+          <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/portfolio.png" class="card-img-top" alt="...">
+                <h5 class="card-header">A Basic Online Portfolio</h5>
+                <div class="card-body">
+                  <p class="card-text">A simple digital portfolio for showcasing projects and skills made using HTML5,
+                    CSS3, JavaScript and Bootstrap 5.</p>
                 </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="card-group">
-                <div class="card" style="width: 15rem;">
-                  <img src="assets/indian-sign-lang.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Audio to Indian Sign Language Translator</h5>
-                    <p class="card-text">A simple web application that can translate audio or textual input into the
-                      Indian Sign Language and display it using gifs. </p>
-                    <a href="#" class="btn btn-primary">READ MORE</a>
-                  </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">READ MORE</a>
                 </div>
               </div>
             </div>
 
-            <div class="col-sm-4">
-              <div class="card-group">
-                <div class="card" style="width: 15rem;">
-                  <img src="assets/policebot.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">PoliceBot: A chatbot for crime reporting and awareness</h5>
-                    <p class="card-text">Efficient and user-friendly Chatbot for Crime Registration & Crime Awareness
-                    </p>
-                    <a href="#" class="btn btn-primary">READ MORE</a>
-                  </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/indian-sign-lang.png" class="card-img-top" alt="...">
+                <h5 class="card-header">Audio to Indian Sign Language Translator</h5>
+                <div class="card-body">
+                  <p class="card-text">A simple web application that can translate audio or textual input into the
+                    Indian Sign Language and display it using gifs. </p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">READ MORE</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/policebot.png" class="card-img-top" alt="...">
+                <h5 class="card-title card-header">PoliceBot: A chatbot for crime reporting and awareness</h5>
+                <div class="card-body">
+                  <p class="card-text">Efficient and user-friendly Chatbot for Crime Registration & Crime Awareness
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">READ MORE</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="row mb-4">
-            <div class="col-sm-4">
-              <div class="card-group">
-                <div class="card" style="width: 15rem;">
-                  <img src="assets/kanban.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">A Simple Kanban Board</h5>
-                    <p class="card-text">A simple Kanban Board for managing tasks made using HTML5, CSS3 and
-                      JavaScript..</p>
-                    <a href="#" class="btn btn-primary">READ MORE</a>
-                  </div>
+          <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/kanban.png" class="card-img-top" alt="...">
+                <h5 class="card-title card-header">A Simple Kanban Board</h5>
+                <div class="card-body">
+                  <p class="card-text">A simple Kanban Board for managing tasks made using HTML5, CSS3 and
+                    JavaScript..</p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">READ MORE</a>
                 </div>
               </div>
             </div>
 
-            <div class="col-sm-4">
-              <div class="card-group">
-                <div class="card" style="width: 15rem;">
-                  <img src="assets/mayo_japan.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Mayo Life site</h5>
-                    <p class="card-text">I designed and developed the mayo-life.site for a Japanese YouTuber Mayo Japan.
-                    </p>
-                    <a href="#" class="btn btn-primary">READ MORE</a>
-                  </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/mayo_japan.png" class="card-img-top" alt="...">
+
+                <h5 class="card-title card-header">Mayo Life site</h5>
+                <div class="card-body">
+                  <p class="card-text">I designed and developed the mayo-life.site for a Japanese YouTuber Mayo Japan.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">READ MORE</a>
                 </div>
               </div>
             </div>
 
-            <div class="col-sm-4">
-              <div class="card-group">
-                <div class="card" style="width: 15rem;">
-                  <img src="assets/mayo_japan.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Mayo Life Site Android Webview App</h5>
-                    <p class="card-text">A simple Webview Android Application for Mayo Japan's website.</p>
-                    <a href="#" class="btn btn-primary">READ MORE</a>
-                  </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/mayo_japan.png" class="card-img-top" alt="...">
+                <h5 class="card-header">Mayo Life's Android Webview App</h5>
+                <div class="card-body">
+                  <p class="card-text"> A simple Webview Android Application for Mayo Japan's website.</p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">READ MORE</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="card-group">
-                <div class="card" style="width: 15rem;">
-                  <img src="assets/chanoyu_bushi.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Renovation of Chanoyu Bushi site</h5>
-                    <p class="card-text">Renovated the design of the English Version of the Chanoyu Bushi site for a
-                      Japanese Sado master.</p>
-                    <a href="#" class="btn btn-primary">READ MORE</a>
-                  </div>
+          <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/chanoyu_bushi.png" class="card-img-top" alt="...">
+                <h5 class="card-title card-header">Renovation of Chanoyu Bushi site</h5>
+                <div class="card-body">
+                  <p class="card-text">Renovated the design of the English Version of the Chanoyu Bushi site for a
+                    Japanese Sado master.</p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">READ MORE</a>
                 </div>
               </div>
             </div>
-            <div class="col-sm-4">
-              <div class="card-group">
-                <div class="card" style="width: 15rem;">
-                  <img src="assets/otaku_shinbun.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">UI/UX Design for Otaku Shinbun Android App</h5>
-                    <p class="card-text">Designed the User Interface and User Experience for a news sharing Application.
-                    </p>
-                    <a href="#" class="btn btn-primary">READ MORE</a>
-                  </div>
+
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/otaku_shinbun.png" class="card-img-top" alt="...">
+                <h5 class="card-title card-header">UI/UX Design for Otaku Shinbun Android App</h5>
+                <div class="card-body">
+                  <p class="card-text">Designed the User Interface and User Experience for a news sharing Application.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">READ MORE</a>
                 </div>
               </div>
             </div>
           </div>
       </section>
     </main>
-    
-    <div class="mt-4" style="margin-bottom: 0;">
+
+    <div class="mt-5">
       <p>
         Send Email for more details <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
-          <i title="email" class="far fa-envelope fa-lg social"></i></a></p>
+          <i title="email" class="far fa-envelope fa-lg social"></i></a> or Connect on <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
+            <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i></p>
+          </a>
     </div>
 
 
-    <footer>
+    <footer class="bg-light">
       <hr />
       <div class="d-flex justify-content-center">
         <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
@@ -197,7 +203,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script src="script.js"></script>
 </body>
 
 </html>
